# momentum-trading-strategy

./: .gitignore  CLAUDE.md  README.md  XRRVMomAPI.json  XRRVMomentum.json  analyze_dynamic_rebalance.py  backtest_48mo_20260203_162014.csv  backtest_48mo_20260203_163128.csv  backtest_48mo_20260203_171449.csv  backtest_comparison_20260203.csv  backtest_equity_2025-05-03_2026-01-28.csv  backtest_results_2025-05-03_2026-01-28.csv  backtest_results_summary.md  backup.sh  claude.md  compare_periods.py  config.example.yaml  config.yaml  fetch_2014_2020.py  fetch_and_backtest.py  fetch_extended_data.py  market-metadata.json  nifty-200.csv  optimize_momentum.py  optimize_rebalance.py  plan.md  pyproject.toml  quick_analysis.py  quick_results.csv  run_comparison.py  start.sh  stock-rotation-sideways.md  stock-sectors.json  stock-universe.json  test_dynamic_rebalance.py  test_dynamic_vs_fixed.py  test_rebalance_freq.py
config/: indices.yml
fortress/: __main__.py  backtest.py  cache.py  cli.py  config.py  indicators.py  instruments.py  logger.py  market_data.py  momentum_engine.py  nse_data_loader.py  optimizer.py  order_manager.py  portfolio.py  rebalance_executor.py  rebalance_planner.py  universe.py
fortress/strategy/: README.md  __init__.py  adaptive_dual_momentum.py  (+2 more)
tests/: test_indicators.py  test_order_manager.py  test_rebalance_executor.py  test_rebalance_planner.py  test_risk_governor.py  test_sectors.py  test_strategy.py  test_trigger_check.py  test_universe.py
tools/: build_microcap_universe.py  build_sectors.py  build_smallcap_universe.py  reconcile_state.py
